src/objects/Warranty__c.object
<CustomObject>
    <fields>
        <fullName>Field1__c</fullName>
        <label>保修年限</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <formula>prince__c  /  Field1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>保修单价</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>保修设备序列号</label>
        <referenceTo>Equipment__c</referenceTo>
        <relationshipLabel>保修合约</relationshipLabel>
        <relationshipName>shebei</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NextPayDate__c</fullName>
        <label>下次付款日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Warrantyenddate__c</fullName>
        <label>保修结束日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Warrantystartdate__c</fullName>
        <label>保修起始日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>area__c</fullName>
        <label>#区域#old</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>北区</fullName>
                </value>
                <value>
                    <fullName>东区</fullName>
                </value>
                <value>
                    <fullName>南区</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>areanew__c</fullName>
        <formula>text(customer__r.area__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>区域</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>业务机会</label>
        <referenceTo>chance__c</referenceTo>
        <relationshipLabel>保修合约</relationshipLabel>
        <relationshipName>AhSl</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>客户</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>保修合约</relationshipLabel>
        <relationshipName>Fns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>payment__c</fullName>
        <label>付款方式</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>一年一付</fullName>
                    <default>true</default>
                    <label>一年一付</label>
                </value>
                <value>
                    <fullName>一季度一付</fullName>
                </value>
                <value>
                    <fullName>一次性全付</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>prince__c</fullName>
        <label>保修总价</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>remark__c</fullName>
        <label>备注</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>serviceperiod__c</fullName>
        <label>保修年限（隐藏）</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>warrantytype__c</fullName>
        <label>保修类型</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>全保</fullName>
                </value>
                <value>
                    <fullName>技术保修</fullName>
                </value>
                <value>
                    <fullName>单次付费</fullName>
                </value>
                <value>
                    <fullName>半保-不含激光腔</fullName>
                </value>
                <value>
                    <fullName>Credit code服务费</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcfkje__c</fullName>
        <label>下次付款金额</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>zsbxys__c</fullName>
        <label>赠送保修月数</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zshc__c</fullName>
        <label>赠送耗材</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>氟化氩气体</fullName>
                </value>
                <value>
                    <fullName>能量测试胶片</fullName>
                </value>
                <value>
                    <fullName>校准光感纸</fullName>
                </value>
                <value>
                    <fullName>PMMA测试板</fullName>
                </value>
                <value>
                    <fullName>微粒抽吸吸嘴</fullName>
                </value>
                <value>
                    <fullName>老视软件注册码</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>保修合约</label>
    <listViews>
        <fullName>ALL</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>customer__c</columns>
        <columns>warrantytype__c</columns>
        <columns>serviceperiod__c</columns>
        <columns>Warrantystartdate__c</columns>
        <columns>Warrantyenddate__c</columns>
        <columns>prince__c</columns>
        <columns>chance__c</columns>
        <columns>zshc__c</columns>
        <columns>zsbxys__c</columns>
        <columns>remark__c</columns>
        <filterScope>Everything</filterScope>
        <label>全部保修合约</label>
    </listViews>
    <listViews>
        <fullName>Y2014</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>customer__c</columns>
        <columns>warrantytype__c</columns>
        <columns>serviceperiod__c</columns>
        <columns>Warrantystartdate__c</columns>
        <columns>Warrantyenddate__c</columns>
        <columns>prince__c</columns>
        <columns>remark__c</columns>
        <columns>chance__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>2014</value>
        </filters>
        <label>2014年保修合约</label>
    </listViews>
    <listViews>
        <fullName>Y2015</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>customer__c</columns>
        <columns>warrantytype__c</columns>
        <columns>serviceperiod__c</columns>
        <columns>Warrantystartdate__c</columns>
        <columns>Warrantyenddate__c</columns>
        <columns>prince__c</columns>
        <columns>remark__c</columns>
        <columns>chance__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>2015</value>
        </filters>
        <label>2015年保修合约</label>
    </listViews>
    <listViews>
        <fullName>Y2016</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>customer__c</columns>
        <columns>warrantytype__c</columns>
        <columns>serviceperiod__c</columns>
        <columns>Warrantystartdate__c</columns>
        <columns>Warrantyenddate__c</columns>
        <columns>prince__c</columns>
        <columns>remark__c</columns>
        <columns>chance__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>2016</value>
        </filters>
        <label>2016年保修合约</label>
    </listViews>
    <listViews>
        <fullName>Y2017</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>customer__c</columns>
        <columns>warrantytype__c</columns>
        <columns>serviceperiod__c</columns>
        <columns>Warrantystartdate__c</columns>
        <columns>Warrantyenddate__c</columns>
        <columns>prince__c</columns>
        <columns>Field3__c</columns>
        <columns>payment__c</columns>
        <columns>remark__c</columns>
        <columns>chance__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>2017</value>
        </filters>
        <label>2017年保修合约</label>
    </listViews>
    <listViews>
        <fullName>oubao</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>customer__c</columns>
        <columns>warrantytype__c</columns>
        <columns>serviceperiod__c</columns>
        <columns>Warrantystartdate__c</columns>
        <columns>Warrantyenddate__c</columns>
        <columns>prince__c</columns>
        <columns>remark__c</columns>
        <columns>chance__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>OPTOS</value>
        </filters>
        <label>欧堡保修合约</label>
    </listViews>
    <listViews>
        <fullName>zhunfenzi</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>customer__c</columns>
        <columns>warrantytype__c</columns>
        <columns>serviceperiod__c</columns>
        <columns>Warrantystartdate__c</columns>
        <columns>Warrantyenddate__c</columns>
        <columns>prince__c</columns>
        <columns>remark__c</columns>
        <columns>chance__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>AMARIS</value>
        </filters>
        <label>准分子保修合约</label>
    </listViews>
    <nameField>
        <label>合约名称</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>保修合约</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>